// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter renders correctly end=0 1`] = `
<DocumentFragment>
  .cache-6dvfxz-Counter {
  position: relative;
}

.cache-qnmuh8-Counter {
  visibility: hidden;
}

.cache-q3bl5l-Counter {
  position: absolute;
  top: 0;
}

<div
    class="cache-6dvfxz-Counter"
  >
    <div
      class="cache-qnmuh8-Counter"
    >
      0
    </div>
    <div
      class="cache-q3bl5l-Counter"
    >
      <span>
        0
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Counter renders correctly end=100 1`] = `
<DocumentFragment>
  .cache-6dvfxz-Counter {
  position: relative;
}

.cache-qnmuh8-Counter {
  visibility: hidden;
}

.cache-q3bl5l-Counter {
  position: absolute;
  top: 0;
}

<div
    class="cache-6dvfxz-Counter"
  >
    <div
      class="cache-qnmuh8-Counter"
    >
      100
    </div>
    <div
      class="cache-q3bl5l-Counter"
    >
      <span>
        0
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Counter renders correctly end=10000 1`] = `
<DocumentFragment>
  .cache-6dvfxz-Counter {
  position: relative;
}

.cache-qnmuh8-Counter {
  visibility: hidden;
}

.cache-q3bl5l-Counter {
  position: absolute;
  top: 0;
}

<div
    class="cache-6dvfxz-Counter"
  >
    <div
      class="cache-qnmuh8-Counter"
    >
      10000
    </div>
    <div
      class="cache-q3bl5l-Counter"
    >
      <span>
        0
      </span>
    </div>
  </div>
</DocumentFragment>
`;
